Swagger fix, error handling, finalizing backend logic, front adjustments
